// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PortfolioAnalysisView renders correctly 1`] = `
<Container
  className="portfolio-analysis"
>
  <div
    className="portfolio-analysis__header"
  >
    <div
      className="portfolio-analysis__title"
    >
      Portfolio Analysis
    </div>
  </div>
  <div
    className="portfolio-analysis__controls"
  >
    <Select
      className="portfolio-analysis__select-kpi"
      components={Object {}}
      isMulti={false}
      isSearchable={false}
      onChange={[Function]}
      options={
        Array [
          Object {
            "label": "Leasing Performance",
            "value": "leasing_performance",
          },
          Object {
            "label": "Conversion Rates",
            "value": "conversion_rates",
          },
          Object {
            "label": "Retention Performance",
            "value": "retention_performance",
          },
        ]
      }
      size=""
      theme="default"
      value={
        Object {
          "label": "Leasing Performance",
          "value": "leasing_performance",
        }
      }
    />
    <DateRangeSelector
      dateFormat="YYYY-MM-DD"
      end_date="2019-04-22"
      onChange={[Function]}
      preset="custom"
      start_date="2019-04-15"
    />
  </div>
  <div
    className="portfolio-analysis__title-bar"
  >
    <RmbNavLinks
      onChange={[Function]}
      options={
        Array [
          Object {
            "label": "Property Averages",
            "tooltip": "property_averages",
            "value": "1",
          },
          Object {
            "label": "Property Totals",
            "tooltip": "property_totals",
            "value": "0",
          },
        ]
      }
      selected="1"
    />
    <div
      className="portfolio-analysis__property-count"
    >
      5
       properties
    </div>
  </div>
  <div
    className="portfolio-analysis__kpi-cards"
  >
    <Memo(KPICard)
      className="portfolio-analysis__kpi-card"
      health={0}
      key="usv_inq"
      name="USV → INQ"
      target="7.0%"
      targetTooltip="average_target_among_active_campaigns"
      value="5.0%"
    />
    <Memo(KPICard)
      className="portfolio-analysis__kpi-card"
      health={1}
      key="inq_tou"
      name="INQ → TOU"
      target="25%"
      targetTooltip="average_target_among_active_campaigns"
      value="20%"
    />
    <Memo(KPICard)
      className="portfolio-analysis__kpi-card"
      health={2}
      key="tou_app"
      name="TOU → APP"
      target="50%"
      targetTooltip="average_target_among_active_campaigns"
      value="60%"
    />
  </div>
  <div
    className="portfolio-analysis__table"
  >
    <PortfolioTable
      kpi_order={
        Array [
          Object {
            "label": "Lease Rate",
            "value": "leased_rate",
          },
          Object {
            "label": "Occupancy Rate",
            "value": "occupancy_rate",
          },
          Object {
            "label": "CD Rate",
            "value": "lease_cd_rate",
          },
          Object {
            "label": "Renewal Rate",
            "value": "renewal_rate",
          },
        ]
      }
      properties={
        Array [
          Object {
            "image_url": "https://www.hillsdale.edu/wp-content/uploads/2016/05/Monument-Valley-800x800.jpg",
            "kpis": Object {
              "lease_cd_rate": 0.1,
              "leased_rate": 0.9,
              "occupancy_rate": 0.8,
              "renewal_rate": 0.5,
            },
            "name": "West",
            "properties": Array [
              Object {
                "address": "San Antonio, TX 78207",
                "health": 0,
                "image_url": "https://www.inquirer.com/resizer/olBwbov37jGKpl6IaoiTBYCQ-n4=/1400x932/smart/arc-anglerfish-arc2-prod-pmn.s3.amazonaws.com/public/FTMY2CQIHJEO3HSRUCOXCWDNH4.jpg",
                "kpis": Object {
                  "lease_cd_rate": 0.1,
                  "leased_rate": 0.9,
                  "occupancy_rate": 0.8,
                  "renewal_rate": 0.5,
                },
                "name": "Building A",
                "targets": Object {
                  "lease_cd_rate": 0.1,
                  "leased_rate": 0.9,
                  "occupancy_rate": 0.8,
                  "renewal_rate": 0.5,
                },
              },
              Object {
                "address": "San Antonio, TX 78208",
                "health": 1,
                "image_url": "https://www.inquirer.com/resizer/olBwbov37jGKpl6IaoiTBYCQ-n4=/1400x932/smart/arc-anglerfish-arc2-prod-pmn.s3.amazonaws.com/public/FTMY2CQIHJEO3HSRUCOXCWDNH4.jpg",
                "kpis": Object {
                  "lease_cd_rate": 0.1,
                  "leased_rate": 0.9,
                  "occupancy_rate": 0.8,
                  "renewal_rate": 0.5,
                },
                "name": "Building B",
                "targets": Object {
                  "lease_cd_rate": 0.1,
                  "leased_rate": 0.9,
                  "occupancy_rate": 0.8,
                  "renewal_rate": 0.5,
                },
              },
              Object {
                "address": "San Antonio, TX 78209",
                "health": 2,
                "image_url": "https://www.inquirer.com/resizer/olBwbov37jGKpl6IaoiTBYCQ-n4=/1400x932/smart/arc-anglerfish-arc2-prod-pmn.s3.amazonaws.com/public/FTMY2CQIHJEO3HSRUCOXCWDNH4.jpg",
                "kpis": Object {
                  "lease_cd_rate": 0.1,
                  "leased_rate": 0.9,
                  "occupancy_rate": 0.8,
                  "renewal_rate": 0.5,
                },
                "name": "Building C",
                "targets": Object {
                  "lease_cd_rate": 0.1,
                  "leased_rate": 0.9,
                  "occupancy_rate": 0.8,
                  "renewal_rate": 0.5,
                },
              },
            ],
            "targets": Object {
              "lease_cd_rate": 0.1,
              "leased_rate": 0.9,
              "occupancy_rate": 0.8,
              "renewal_rate": 0.5,
            },
            "type": "group",
          },
          Object {
            "address": "San Antonio, TX 78207",
            "health": 1,
            "image_url": "https://www.inquirer.com/resizer/olBwbov37jGKpl6IaoiTBYCQ-n4=/1400x932/smart/arc-anglerfish-arc2-prod-pmn.s3.amazonaws.com/public/FTMY2CQIHJEO3HSRUCOXCWDNH4.jpg",
            "kpis": Object {
              "lease_cd_rate": 0.1,
              "leased_rate": 0.9,
              "occupancy_rate": 0.8,
              "renewal_rate": 0.5,
            },
            "name": "Building D",
            "targets": Object {
              "lease_cd_rate": 0.1,
              "leased_rate": 0.9,
              "occupancy_rate": 0.8,
              "renewal_rate": 0.5,
            },
            "type": "individual",
          },
          Object {
            "address": "San Antonio, TX 78207",
            "health": 2,
            "image_url": "https://www.hillsdale.edu/wp-content/uploads/2016/05/Monument-Valley-800x800.jpg",
            "kpis": Object {
              "lease_cd_rate": 0.1,
              "leased_rate": 0.9,
              "occupancy_rate": 0.8,
              "renewal_rate": 0.5,
            },
            "name": "Remarkably National",
            "targets": Object {
              "lease_cd_rate": 0.1,
              "leased_rate": 0.9,
              "occupancy_rate": 0.8,
              "renewal_rate": 0.5,
            },
            "type": "individual",
          },
          Object {
            "image_url": "https://www.hillsdale.edu/wp-content/uploads/2016/05/Monument-Valley-800x800.jpg",
            "kpis": Object {
              "lease_cd_rate": 0.1,
              "leased_rate": 0.9,
              "occupancy_rate": 0.8,
              "renewal_rate": 0.5,
            },
            "name": "Portfolio Average",
            "property_count": 5,
            "targets": Object {
              "lease_cd_rate": 0.1,
              "leased_rate": 0.9,
              "occupancy_rate": 0.8,
              "renewal_rate": 0.5,
            },
            "type": "group",
          },
        ]
      }
    />
  </div>
</Container>
`;

exports[`PortfolioAnalysisView renders partial KPIs 1`] = `
<Container
  className="portfolio-analysis"
>
  <div
    className="portfolio-analysis__header"
  >
    <div
      className="portfolio-analysis__title"
    >
      Portfolio Analysis
    </div>
  </div>
  <div
    className="portfolio-analysis__controls"
  >
    <Select
      className="portfolio-analysis__select-kpi"
      components={Object {}}
      isMulti={false}
      isSearchable={false}
      onChange={[Function]}
      options={
        Array [
          Object {
            "label": "Leasing Performance",
            "value": "leasing_performance",
          },
          Object {
            "label": "Conversion Rates",
            "value": "conversion_rates",
          },
          Object {
            "label": "Retention Performance",
            "value": "retention_performance",
          },
        ]
      }
      size=""
      theme="default"
      value={
        Object {
          "label": "Leasing Performance",
          "value": "leasing_performance",
        }
      }
    />
    <RMBTooltip
      overlay={
        <div
          className="portfolio-analysis__alarm-text"
        >
          You have at least 
          2
           
          properties
           with no data in this selected reporting period.
        </div>
      }
      placement="top"
      theme="light-dark"
    >
      <div
        className="portfolio-analysis__alarm"
      >
        <Alarm
          className="portfolio-analysis__alarm-icon"
        />
      </div>
    </RMBTooltip>
    <DateRangeSelector
      dateFormat="YYYY-MM-DD"
      end_date="2019-04-22"
      onChange={[Function]}
      preset="custom"
      start_date="2019-04-15"
    />
  </div>
  <div
    className="portfolio-analysis__title-bar"
  >
    <RmbNavLinks
      onChange={[Function]}
      options={
        Array [
          Object {
            "label": "Property Averages",
            "tooltip": "property_averages",
            "value": "1",
          },
          Object {
            "label": "Property Totals",
            "tooltip": "property_totals",
            "value": "0",
          },
        ]
      }
      selected="1"
    />
    <div
      className="portfolio-analysis__property-count"
    >
      5
       properties
    </div>
  </div>
  <div
    className="portfolio-analysis__kpi-cards"
  >
    <NoValueKPICard
      className="portfolio-analysis__kpi-card"
      health={0}
      key="usv_inq"
      name="USV → INQ"
      target="NaN%"
      value="NaN%"
    />
    <Memo(KPICard)
      className="portfolio-analysis__kpi-card"
      health={1}
      key="inq_tou"
      name="INQ → TOU"
      target="25%"
      targetTooltip="average_target_among_active_campaigns"
      value="20%"
    />
    <NoTargetKPICard
      className="portfolio-analysis__kpi-card"
      health={0}
      key="tou_app"
      name="TOU → APP"
      target="NaN%"
      value="60%"
    />
  </div>
  <div
    className="portfolio-analysis__table"
  >
    <PortfolioTable
      kpi_order={
        Array [
          Object {
            "label": "Lease Rate",
            "value": "leased_rate",
          },
          Object {
            "label": "Occupancy Rate",
            "value": "occupancy_rate",
          },
          Object {
            "label": "CD Rate",
            "value": "lease_cd_rate",
          },
          Object {
            "label": "Renewal Rate",
            "value": "renewal_rate",
          },
        ]
      }
      properties={
        Array [
          Object {
            "image_url": "https://www.hillsdale.edu/wp-content/uploads/2016/05/Monument-Valley-800x800.jpg",
            "kpis": Object {
              "lease_cd_rate": 0.1,
              "leased_rate": 0.9,
              "occupancy_rate": 0.8,
              "renewal_rate": 0.5,
            },
            "name": "West",
            "properties": Array [
              Object {
                "address": "San Antonio, TX 78207",
                "health": -1,
                "image_url": "https://www.inquirer.com/resizer/olBwbov37jGKpl6IaoiTBYCQ-n4=/1400x932/smart/arc-anglerfish-arc2-prod-pmn.s3.amazonaws.com/public/FTMY2CQIHJEO3HSRUCOXCWDNH4.jpg",
                "name": "Building A",
              },
              Object {
                "address": "San Antonio, TX 78208",
                "health": 1,
                "image_url": "https://www.inquirer.com/resizer/olBwbov37jGKpl6IaoiTBYCQ-n4=/1400x932/smart/arc-anglerfish-arc2-prod-pmn.s3.amazonaws.com/public/FTMY2CQIHJEO3HSRUCOXCWDNH4.jpg",
                "kpis": Object {
                  "lease_cd_rate": 0.1,
                  "leased_rate": 0.9,
                  "occupancy_rate": 0.8,
                  "renewal_rate": 0.5,
                },
                "name": "Building B",
                "targets": Object {
                  "lease_cd_rate": 0.1,
                  "leased_rate": 0.9,
                  "occupancy_rate": 0.8,
                  "renewal_rate": 0.5,
                },
              },
              Object {
                "address": "San Antonio, TX 78209",
                "health": 2,
                "image_url": "https://www.inquirer.com/resizer/olBwbov37jGKpl6IaoiTBYCQ-n4=/1400x932/smart/arc-anglerfish-arc2-prod-pmn.s3.amazonaws.com/public/FTMY2CQIHJEO3HSRUCOXCWDNH4.jpg",
                "kpis": Object {
                  "lease_cd_rate": 0.1,
                  "leased_rate": 0.9,
                  "occupancy_rate": 0.8,
                  "renewal_rate": 0.5,
                },
                "name": "Building C",
                "targets": Object {
                  "lease_cd_rate": 0.1,
                  "leased_rate": 0.9,
                  "occupancy_rate": 0.8,
                  "renewal_rate": 0.5,
                },
              },
            ],
            "targets": Object {
              "lease_cd_rate": 0.1,
              "leased_rate": 0.9,
              "occupancy_rate": 0.8,
              "renewal_rate": 0.5,
            },
            "type": "group",
          },
          Object {
            "address": "San Antonio, TX 78207",
            "health": 1,
            "image_url": "https://www.inquirer.com/resizer/olBwbov37jGKpl6IaoiTBYCQ-n4=/1400x932/smart/arc-anglerfish-arc2-prod-pmn.s3.amazonaws.com/public/FTMY2CQIHJEO3HSRUCOXCWDNH4.jpg",
            "name": "Building D",
            "type": "individual",
          },
          Object {
            "address": "San Antonio, TX 78207",
            "health": 2,
            "image_url": "https://www.hillsdale.edu/wp-content/uploads/2016/05/Monument-Valley-800x800.jpg",
            "kpis": Object {
              "lease_cd_rate": 0.1,
              "leased_rate": 0.9,
              "occupancy_rate": 0.8,
              "renewal_rate": 0.5,
            },
            "name": "Remarkably National",
            "targets": Object {
              "lease_cd_rate": 0.1,
              "leased_rate": 0.9,
              "occupancy_rate": 0.8,
              "renewal_rate": 0.5,
            },
            "type": "individual",
          },
          Object {
            "image_url": "https://www.hillsdale.edu/wp-content/uploads/2016/05/Monument-Valley-800x800.jpg",
            "kpis": Object {
              "lease_cd_rate": 0.1,
              "leased_rate": 0.9,
              "occupancy_rate": 0.8,
              "renewal_rate": 0.5,
            },
            "name": "Portfolio Average",
            "property_count": 5,
            "targets": Object {
              "lease_cd_rate": 0.1,
              "leased_rate": 0.9,
              "occupancy_rate": 0.8,
              "renewal_rate": 0.5,
            },
            "type": "group",
          },
        ]
      }
    />
  </div>
</Container>
`;

exports[`PortfolioAnalysisView renders without KPIs 1`] = `
<Container
  className="portfolio-analysis"
>
  <div
    className="portfolio-analysis__header"
  >
    <div
      className="portfolio-analysis__title"
    >
      Portfolio Analysis
    </div>
  </div>
  <div
    className="portfolio-analysis__controls"
  >
    <Select
      className="portfolio-analysis__select-kpi"
      components={Object {}}
      isMulti={false}
      isSearchable={false}
      onChange={[Function]}
      options={
        Array [
          Object {
            "label": "Leasing Performance",
            "value": "leasing_performance",
          },
          Object {
            "label": "Conversion Rates",
            "value": "conversion_rates",
          },
          Object {
            "label": "Retention Performance",
            "value": "retention_performance",
          },
        ]
      }
      size=""
      theme="default"
      value={
        Object {
          "label": "Leasing Performance",
          "value": "leasing_performance",
        }
      }
    />
    <RMBTooltip
      overlay={
        <div
          className="portfolio-analysis__alarm-text"
        >
          You have at least 
          5
           
          properties
           with no data in this selected reporting period.
        </div>
      }
      placement="top"
      theme="light-dark"
    >
      <div
        className="portfolio-analysis__alarm"
      >
        <Alarm
          className="portfolio-analysis__alarm-icon"
        />
      </div>
    </RMBTooltip>
    <DateRangeSelector
      dateFormat="YYYY-MM-DD"
      end_date="2019-04-22"
      onChange={[Function]}
      preset="custom"
      start_date="2019-04-15"
    />
  </div>
  <div
    className="portfolio-analysis__title-bar"
  >
    <RmbNavLinks
      onChange={[Function]}
      options={
        Array [
          Object {
            "label": "Property Averages",
            "tooltip": "property_averages",
            "value": "1",
          },
          Object {
            "label": "Property Totals",
            "tooltip": "property_totals",
            "value": "0",
          },
        ]
      }
      selected="1"
    />
    <div
      className="portfolio-analysis__property-count"
    >
      5
       properties
    </div>
  </div>
  <div
    className="portfolio-analysis__kpi-cards"
  >
    <NoValueKPICard
      className="portfolio-analysis__kpi-card"
      health={-1}
      key="usv_inq"
      name="USV → INQ"
      target="NaN%"
      value="NaN%"
    />
    <NoValueKPICard
      className="portfolio-analysis__kpi-card"
      health={-1}
      key="inq_tou"
      name="INQ → TOU"
      target="NaN%"
      value="NaN%"
    />
    <NoValueKPICard
      className="portfolio-analysis__kpi-card"
      health={-1}
      key="tou_app"
      name="TOU → APP"
      target="NaN%"
      value="NaN%"
    />
  </div>
  <div
    className="portfolio-analysis__table"
  >
    <PortfolioTable
      kpi_order={
        Array [
          Object {
            "label": "Lease Rate",
            "value": "leased_rate",
          },
          Object {
            "label": "Occupancy Rate",
            "value": "occupancy_rate",
          },
          Object {
            "label": "CD Rate",
            "value": "lease_cd_rate",
          },
          Object {
            "label": "Renewal Rate",
            "value": "renewal_rate",
          },
        ]
      }
      properties={
        Array [
          Object {
            "image_url": "https://www.hillsdale.edu/wp-content/uploads/2016/05/Monument-Valley-800x800.jpg",
            "name": "West",
            "properties": Array [
              Object {
                "address": "San Antonio, TX 78207",
                "health": -1,
                "image_url": "https://www.inquirer.com/resizer/olBwbov37jGKpl6IaoiTBYCQ-n4=/1400x932/smart/arc-anglerfish-arc2-prod-pmn.s3.amazonaws.com/public/FTMY2CQIHJEO3HSRUCOXCWDNH4.jpg",
                "name": "Building A",
              },
              Object {
                "address": "San Antonio, TX 78208",
                "health": -1,
                "image_url": "https://www.inquirer.com/resizer/olBwbov37jGKpl6IaoiTBYCQ-n4=/1400x932/smart/arc-anglerfish-arc2-prod-pmn.s3.amazonaws.com/public/FTMY2CQIHJEO3HSRUCOXCWDNH4.jpg",
                "name": "Building B",
              },
              Object {
                "address": "San Antonio, TX 78209",
                "health": -1,
                "image_url": "https://www.inquirer.com/resizer/olBwbov37jGKpl6IaoiTBYCQ-n4=/1400x932/smart/arc-anglerfish-arc2-prod-pmn.s3.amazonaws.com/public/FTMY2CQIHJEO3HSRUCOXCWDNH4.jpg",
                "name": "Building C",
              },
            ],
            "type": "group",
          },
          Object {
            "address": "San Antonio, TX 78207",
            "health": -1,
            "image_url": "https://www.inquirer.com/resizer/olBwbov37jGKpl6IaoiTBYCQ-n4=/1400x932/smart/arc-anglerfish-arc2-prod-pmn.s3.amazonaws.com/public/FTMY2CQIHJEO3HSRUCOXCWDNH4.jpg",
            "name": "Building D",
            "type": "individual",
          },
          Object {
            "address": "San Antonio, TX 78207",
            "health": -1,
            "image_url": "https://www.hillsdale.edu/wp-content/uploads/2016/05/Monument-Valley-800x800.jpg",
            "name": "Remarkably National",
            "type": "individual",
          },
          Object {
            "image_url": "https://www.hillsdale.edu/wp-content/uploads/2016/05/Monument-Valley-800x800.jpg",
            "name": "Portfolio Average",
            "property_count": 5,
            "type": "group",
          },
        ]
      }
    />
  </div>
</Container>
`;
